--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.nebulateme.windows",
+  "name": "com.nebulateme.di_tools",
   "version": "1.0.0",
   "displayName": "DI Tools",
   "description": "DI tools for Unity",
